force-app/main/default/objects/Corporate_Calling__c/fields/Since_engag_BR_E_positive_outcomes__c.field-meta.xml
<CustomField>
    <fullName>Since_engag_BR_E_positive_outcomes__c</fullName>
    <label>Since engag. BR&amp;E positive outcomes?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>