force-app/main/default/objects/Corporate_Calling__c/fields/Staff_Contact2__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staff Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Corporate_Callings</relationshipName>
    <type>Lookup</type>
</CustomField>