force-app/main/default/objects/Corporate_Calling__c/fields/Staff_Contact__c.field-meta.xml
<CustomField>
    <fullName>Staff_Contact__c</fullName>
    <label>Staff Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>George Spezza</fullName>
            </value>
            <value>
                <fullName>John Alderdice</fullName>
            </value>
            <value>
                <fullName>Ron Wandel</fullName>
            </value>
            <value>
                <fullName>Rebecca Condon</fullName>
            </value>
            <value>
                <fullName>Neil Farmer</fullName>
            </value>
            <value>
                <fullName>Catherine Cieply</fullName>
            </value>
            <value>
                <fullName>Linda Fava</fullName>
            </value>
            <value>
                <fullName>Thomas McGinty</fullName>
            </value>
            <value>
                <fullName>Rob Krauss</fullName>
            </value>
            <value>
                <fullName>Ted Northcott</fullName>
            </value>
            <value>
                <fullName>Ian Brown</fullName>
            </value>
            <value>
                <fullName>Susana Vaz</fullName>
            </value>
            <value>
                <fullName>Matthew Premru</fullName>
            </value>
            <value>
                <fullName>Elizabeth Di Vincenzo</fullName>
            </value>
            <value>
                <fullName>Connie Fusillo</fullName>
            </value>
            <value>
                <fullName>Peter Myall</fullName>
            </value>
            <value>
                <fullName>Vanna Petropoulos</fullName>
            </value>
            <value>
                <fullName>Leslie Fink</fullName>
            </value>
            <value>
                <fullName>Frank Bedard</fullName>
            </value>
            <value>
                <fullName>Laurie Belzak</fullName>
            </value>
            <value>
                <fullName>Joe Mazzei</fullName>
            </value>
            <value>
                <fullName>Rob McMonagle</fullName>
            </value>
            <value>
                <fullName>John Preece</fullName>
            </value>
            <value>
                <fullName>Susan Veigas</fullName>
            </value>
            <value>
                <fullName>Jagdish Yadav</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>