force-app/main/default/objects/Corporate_Calling__c/fields/Street_Name_f__c.field-meta.xml
<CustomField>
    <fullName>Street_Name_f__c</fullName>
    <formula>Account__r.BillingStreet</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street</label>
    <type>Text</type>
</CustomField>