force-app/main/default/objects/Corporate_Calling__c/fields/Street_Number_Letter__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_Letter__c</fullName>
    <label>Street Number Letter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>