force-app/main/default/objects/Corporate_Calling__c/fields/Street_Number_s__c.field-meta.xml
<CustomField>
    <fullName>Street_Number_s__c</fullName>
    <formula>Account__r.Billing_street_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Street Number</label>
    <type>Text</type>
</CustomField>