force-app/main/default/objects/Corporate_Calling__c/fields/Suite_Unit__c.field-meta.xml
<CustomField>
    <fullName>Suite_Unit__c</fullName>
    <label>Suite / Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>