force-app/main/default/objects/Corporate_Calling__c/fields/Suite_Unit_f__c.field-meta.xml
<CustomField>
    <fullName>Suite_Unit_f__c</fullName>
    <formula>Account__r.Billing_street_suite__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Suite / Unit</label>
    <type>Text</type>
</CustomField>