force-app/main/default/objects/Corporate_Calling__c/fields/Thompson_Update__c.field-meta.xml
<CustomField>
    <fullName>Thompson_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if an update should be given to Thompson based on the record.</description>
    <inlineHelpText>Check if you want an update to be included for Councillor Thompson on the Corporate Call.</inlineHelpText>
    <label>Thompson Update</label>
    <type>Checkbox</type>
</CustomField>