force-app/main/default/objects/Corporate_Calling__c/fields/Thompson_Update_Overview__c.field-meta.xml
<CustomField>
    <fullName>Thompson_Update_Overview__c</fullName>
    <label>Thompson Update Overview</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>