force-app/main/default/objects/Corporate_Calling__c/fields/Total_Number_of_Employees__c.field-meta.xml
<CustomField>
    <fullName>Total_Number_of_Employees__c</fullName>
    <formula>Number_of_Full_Time_Employees__c +  Number_of_Part_Time_Employees__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Employment - Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>