force-app/main/default/objects/Corporate_Calling__c/fields/Type_of_Client_Contact__c.field-meta.xml
<CustomField>
    <fullName>Type_of_Client_Contact__c</fullName>
    <label>Type of Client Contact</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Corporate Call</fullName>
                <default>true</default>
                <label>Corporate Call</label>
            </value>
            <value>
                <fullName>Corporate Contact</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>