force-app/main/default/objects/Corporate_Calling__c/fields/what_is_your_current_GFA__c.field-meta.xml
<CustomField>
    <fullName>what_is_your_current_GFA__c</fullName>
    <label>What is your current GFA?</label>
    <length>250</length>
    <type>Text</type>
</CustomField>