force-app/main/default/objects/Corporate_Calling__c/fields/You_recomm_BR_E_to_other_companies__c.field-meta.xml
<CustomField>
    <fullName>You_recomm_BR_E_to_other_companies__c</fullName>
    <label>You recomm. BR&amp;E to other companies?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>Maybe</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>