force-app/main/default/objects/Corporate_Calling__c/listViews/Corporate_Calling_Rickett.listView-meta.xml
<ListView>
    <fullName>Corporate_Calling_Rickett</fullName>
    <columns>NAME</columns>
    <columns>Account__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Mine</filterScope>
    <label>Corporate Calling - Rickett</label>
    <sharedTo>
        <roleAndSubordinates>BRE_Admin</roleAndSubordinates>
        <roleAndSubordinates>BRE_EDO</roleAndSubordinates>
        <roleAndSubordinates>BRE_Supervisor</roleAndSubordinates>
        <roleAndSubordinates>EDC_Admin</roleAndSubordinates>
        <roleAndSubordinates>ES_Admin</roleAndSubordinates>
    </sharedTo>
</ListView>